[package]
name = "oxide"
authors = ["Marius Sunde <marius.sunde@pm.me>"]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "A convenient Game Engine for Rust on top of SDL2"
repository = "https://github.com/SundeMarius/oxide"

[dependencies]
dirs = "6.0.0"
log = "0.4.27"
sdl2 = { version = "0.38.0", features = ["image", "ttf"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter"] }
